docker image config created